tests/EtaX/EtaX.prop/EtaX.prop.05.check
// 2.13-base exitCode: 0   val t2f: Any       = prop _                 // ok
// 2.13-head exitCode: 0   val t2f: Any       = prop _                 // ok
// 2.13-new exitCode: 0   val t2f: Any       = prop _                 // ok
// 3.0-old exitCode: 0   val t2f: Any       = prop _                 // ok
-- [E099] Syntax Migration Warning: /d/shisa/target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.05.scala:11:28 
11 |  val t2f: Any       = prop _                 // ok
   |                       ^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found
// 3.0 exitCode: 1   val t2f: Any       = prop _                 // ok
-- [E099] Syntax Error: /d/shisa/target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.05.scala:11:28 
11 |  val t2f: Any       = prop _                 // ok
   |                       ^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found
// 3.1 exitCode: 1   val t2f: Any       = prop _                 // ok
-- [E099] Syntax Error: /d/shisa/target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.05.scala:11:28 
11 |  val t2f: Any       = prop _                 // ok
   |                       ^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found
